Implementacao da colisao e contagem de pontos do player

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <canvas id='testecanvas'></canvas> 
 
+    <h1 class="counter"></h1>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-
-    <!-- <script src='js/teste.js'></script> -->
 </body>
 </html>
